<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/photo_image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp"
        android:background="#4D3930"
        android:src="@drawable/anner"
        android:clickable="false"
        android:baselineAlignBottom="false"
        android:cropToPadding="false" />

    <EditText
        android:id="@+id/name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textCapWords" />

    <TextView
        style="@style/HeaderTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/toppings"
        android:textAllCaps="true"  />

    <CheckBox
        android:id="@+id/whipped_cream_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:text="@string/whipped_cream"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/chocolate_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:text="@string/chocolate_fudge"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/vanilla_powder_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:text="@string/vanilla_powder"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/nutmeg_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:text="@string/nutmeg"
        android:textSize="16sp" />

    <TextView
        style="@style/HeaderTextStyle"
        android:text="@string/hello_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Button
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="@string/negative"
        android:onClick="decrement"
        />

    <TextView
        android:id="@+id/quantity_text_view"
        android:text="@string/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:textColor="#000000"
        android:textSize="16sp"
        />

    <Button
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:text="@string/positive"
        android:onClick="increment"/>

        </LinearLayout>

    <TextView
        style="@style/HeaderTextStyle"
        android:text="@string/order_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        />

    <TextView
        android:text="@string/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below ="@+id/price_text_view"
        android:textColor="#000000"
        android:textSize="16sp"
        android:id="@+id/order_summary_text_view"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        android:layout_below ="@+id/quantity_text_view"
        android:layout_marginTop="16dp"
        android:onClick="submitOrder"
     />

</LinearLayout>

</ScrollView>